src/test/deca/etapeB/valid/class_decl/empty_class.deca
// Description:
//    Déclaration d'une classe vide
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

{

}

class {

}
