src/test/deca/etapeB/invalid/println_too_many_args.deca
// Description:
//    Utilisation ud println
//
// Resultats:
//    Ligne 11 : trop d'arguments
// 
// Historique:
//    cree le 01/01/2016

{
   println("hello", "my", "world");
}
